第二次带登录

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <a href="#"></a>
                     </div>
                     <div class="login">
-                        <a href="#" class="login_btn">登录<i></i></a>
+                        <a href="登录/表单验证.html" class="login_btn">登录<i></i></a>
                         <a href="#" class="register_btn">注册</a>
                     </div>
                 </div>
